add paintscript files to freedraw

--- a/html/freedraw.html
+++ b/html/freedraw.html
@@ -16,6 +16,6 @@
 	<canvas id="globalCanvas"></canvas>
 
 	<p id="inputLabel">input</p>
-	<input id="input" value=""/>
+	<textarea id="input" rows="3" value=""></textarea>
 </body>
 </html>
