add paintscript.html elements to freedraw

--- a/html/freedraw.html
+++ b/html/freedraw.html
@@ -11,11 +11,103 @@
 
 <script src="/js/freedraw.js" type="text/javascript"></script>
 
+<script type="text/javascript" src="/js/nightingale.js"></script>
+<script type="text/javascript" src="/js/sprintf.js"></script>
+<script type="text/javascript" src="/js/editor.js"></script>
+<script type="text/javascript" src="/js/jscolor.js"></script>
+
+<script type="text/javascript">
+    $( document ).ready( function(  ) {
+            init();
+            jscolor.init();
+            } );
+</script>
+
 </head>
 <body>
-	<canvas id="globalCanvas"></canvas>
+<canvas id="globalCanvas"></canvas>
 
-	<p id="inputLabel">input</p>
-	<textarea id="input" rows="3" value=""></textarea>
+<div id="editCharacterSwitch" class="editClosed">
+    <p id="editClosedText">edit character</p>
+</div>
+
+<textarea id="input" rows="3" value=""></textarea>
+
+<div id="wrapper">
+<div id="innerWrapper">
+<table id="canvasTable" width="800" height="740">
+    <tr>
+        <td>
+            <canvas id="editorCanvas" width="390" height="620"></canvas>
+        </td>
+        <td>
+            <textarea id="editorTextArea"></textarea>
+        </td>
+    </tr>
+</table>    
+<table id="buttonTable" width="800" height="180">
+    <tr>
+        <td>
+            <input class="color 0" id="picker" value="#ff0000" style="background-color: rgb(256, 0, 0);" readOnly="true"/>
+        </td>
+        <td>
+            <button id="noFill">no fill</button>
+        </td>
+        <td>
+        </td>
+        <td>
+            <button id="scribble">scribble</button>
+        </td>
+        <td>
+            <button id="clear">clear</button>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <input class="color 1" id="fill_picker" value="#0000ff" style="background-color: rgb(0, 0, 256);" readOnly="true"/>
+        </td>
+        <td>
+            <button id="fill">fill</button>
+        </td>
+        <td>
+        </td>
+        <td>
+            <button id="quadratic">quadratic</button>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <input class="color 2" id="gradient_picker" value="#00ff00" style="background-color: rgb(0, 256, 0);" readOnly="true"/>
+        </td>
+        <td>
+            <button id="gradient">gradient</button>
+        </td>
+        <td>
+        </td>
+        <td>
+        </td>
+        <td>
+        </td>
+    <td>
+    </tr>
+    <tr>
+        <td>
+            <canvas id="gradientCanvas" width="200" height="50"></canvas>
+        </td>
+        <td>
+            <button id="addStop">add stop</button>
+        </td>
+        <td>
+            <button id="clearGradient">clear gradient</button>
+        </td>
+        <td>
+        </td>
+        <td>
+            <button id="execute">execute</button>
+        </td>
+    </tr>
+</table>
+</div>
+</div>
 </body>
 </html>
