--- a/html/freedraw.html
+++ b/html/freedraw.html
@@ -9,12 +9,11 @@
 <script src="/js/jquery-1.6.1.js" type="text/javascript"></script>
 <script src="/js/processing-1.2.0.js" type="text/javascript"></script>
 
-<script src="/js/freedraw.js" type="text/javascript"></script>
-
-<script type="text/javascript" src="/js/nightingale.js"></script>
 <script type="text/javascript" src="/js/sprintf.js"></script>
-<script type="text/javascript" src="/js/editor.js"></script>
 <script type="text/javascript" src="/js/jscolor.js"></script>
+
+<script src="/js/freedraw.js" type="text/javascript"></script>
+<script type="text/javascript" src="/js/editor.js"></script>
 
 <script type="text/javascript">
     $( document ).ready( function(  ) {
@@ -33,8 +32,38 @@
 
 <textarea id="input" rows="3" value=""></textarea>
 
+<!--
 <div id="wrapper">
 <div id="innerWrapper">
+-->
+<select id="charSelect">
+    <option>a</option>
+    <option>b</option>
+    <option>c</option>
+    <option>d</option>
+    <option>e</option>
+    <option>f</option>
+    <option>g</option>
+    <option>h</option>
+    <option>i</option>
+    <option>j</option>
+    <option>k</option>
+    <option>l</option>
+    <option>m</option>
+    <option>n</option>
+    <option>o</option>
+    <option>p</option>
+    <option>q</option>
+    <option>r</option>
+    <option>s</option>
+    <option>t</option>
+    <option>u</option>
+    <option>v</option>
+    <option>w</option>
+    <option>x</option>
+    <option>y</option>
+    <option>z</option>
+</select>
 <table id="canvasTable" width="800" height="740">
     <tr>
         <td>
@@ -107,7 +136,9 @@
         </td>
     </tr>
 </table>
+<!--
 </div>
 </div>
+-->
 </body>
 </html>
