--- a/html/freedraw.html
+++ b/html/freedraw.html
@@ -9,22 +9,23 @@
 <script src="/js/jquery-1.6.1.js" type="text/javascript"></script>
 <script src="/js/processing-1.2.0.js" type="text/javascript"></script>
 
-<script type="text/javascript" src="/js/sprintf.js"></script>
-<script type="text/javascript" src="/js/jscolor.js"></script>
+<script src="/js/sprintf.js" type="text/javascript"></script>
+<script src="/js/jscolor.js" type="text/javascript"></script>
 
 <script src="/js/freedraw.js" type="text/javascript"></script>
-<script type="text/javascript" src="/js/editor.js"></script>
+<script src="/js/editor.js" type="text/javascript"></script>
 
 <script type="text/javascript">
     $( document ).ready( function(  ) {
-            init();
+            //init();
             jscolor.init();
             } );
 </script>
 
 </head>
 <body>
-<canvas id="globalCanvas"></canvas>
+<canvas id="composeCanvas"></canvas>
+<!--<canvas id="editorCanvas" width="400" height="400"></canvas>-->
 
 <div id="editCharacterSwitch" class="editClosed">
     <p id="editClosedText">edit character</p>
@@ -65,20 +66,8 @@
     <option>y</option>
     <option>z</option>
 </select>
-<canvas id="editorCanvas" width="400" height="400"></canvas>
 <textarea id="editorTextArea"></textarea>
-<!--
-<table id="canvasTable" width="800" height="740">
-    <tr>
-        <td>
-            <canvas id="editorCanvas" width="400" height="400"></canvas>
-        </td>
-        <td>
-            <textarea id="editorTextArea"></textarea>
-        </td>
-    </tr>
-</table>    
--->
+
 <table id="buttonTable" width="800" height="180">
     <tr>
         <td>
@@ -98,7 +87,7 @@
     </tr>
     <tr>
         <td>
-            <input class="color 1" id="fill_picker" value="#0000ff" style="background-color: rgb(0, 0, 256);" readOnly="true"/>
+            <!--<input class="color 1" id="fill_picker" value="#0000ff" style="background-color: rgb(0, 0, 256);" readOnly="true"/>-->
         </td>
         <td>
             <button id="fill">fill</button>
@@ -111,7 +100,7 @@
     </tr>
     <tr>
         <td>
-            <input class="color 2" id="gradient_picker" value="#00ff00" style="background-color: rgb(0, 256, 0);" readOnly="true"/>
+            <!--<input class="color 2" id="gradient_picker" value="#00ff00" style="background-color: rgb(0, 256, 0);" readOnly="true"/>-->
         </td>
         <td>
             <button id="gradient">gradient</button>
