initial attempt at point-only projection combinations

--- a/html/freedraw.html
+++ b/html/freedraw.html
@@ -13,7 +13,7 @@
 <script src="/js/jscolor.js" type="text/javascript"></script>
 
 <script src="/js/freedraw.js" type="text/javascript"></script>
-<script src="/js/editor.js" type="text/javascript"></script>
+<!--<script src="/js/editor.js" type="text/javascript"></script>-->
 
 <!--<script type="text/javascript">
     $( document ).ready( function(  ) {
@@ -27,7 +27,7 @@
 <canvas id="composeCanvas"></canvas>
 <!--<canvas id="editorCanvas" width="400" height="400"></canvas>-->
 
-<div id="editCharacterSwitch">
+<div id="levelSwitch">
     <p id="editClosedText">edit character</p>
     <p id="editOpenText">input character</p>
 </div>
@@ -66,7 +66,7 @@
     <option>y</option>
     <option>z</option>
 </select>
-<textarea id="editorTextArea"></textarea>
+<textarea id="textarea"></textarea>
 
 <table id="buttonTable" width="800" height="140">
     <tr>
@@ -75,6 +75,7 @@
             <p>modes</p>
         </td>
         <td>
+            <p>panels</p>
             <!--<button id="noFill">no fill</button>-->
         </td>
         <td>
